# minimal-wbcw

./: .gitignore  Cargo.toml  Dockerfile  Paused.dot  Playing.dot  README.md  Ready.dot
src/: cli.rs  pipeline.rs
