[package]
name = "cef-audio-mixer-bug"
version = "0.6.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.7", features = ["macros"] }
color-eyre = "0.6.2"
serde = { version = "1.0.192", features = ["derive"] }
tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread", "signal"] }
serde_json = "1"
derive_more = "0.99.17"
gst = { package = "gstreamer", version = "0.24.1" }
gst-video = { package = "gstreamer-video", version = "0.24.1" }
gst-audio = { package = "gstreamer-audio", version = "0.24.1" }
futures = "0.3.30"
clap = { version = "4.4.13", features = ["derive"] }
graphviz-rust = "0.7.0"
glib = "0.21.1"
serde_with = "3.13.0"
chrono = "0.4.41"
isahc = { version = "1.7.2", features = ["json"] }
ntest = "0.9.3"
serial_test = "3.2.0"

[[bin]]
name = "cef-cli"
path = "src/cli.rs"

[lints.clippy]
collapsible_if = "allow"
